k3s/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 namespace: monitoring
 annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
 tls:
  - secretName: grafana-tls
    hosts:
      - grafana.xxx.com
 rules:
   - host: grafana.xxx.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana
               port: 80
